# dlt-providers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
dlt_providers/: helpers.py
dlt_providers/sources/github/: __init__.py  helpers.py  settings.py
dlt_providers/sources/jira/: __init__.py  settings.py
